--- a/.devcontainer/config
+++ b/.devcontainer/config
@@ -1,9 +1,9 @@
 # SnowSQL config
 
 [connections.dev]
-accountname = myaccount
-username = myusername
-password = mypassword
+accountname = sysbjkt-cb92545
+username = cmendez1701
+password = Urizbncmzwemnato9
 rolename = HOL_ROLE
 warehousename = HOL_WH
 dbname = HOL_DB
